# ME4-Service-YouTube

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENT.md  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  FUNCTIONS.md  LICENSE  MCP_ZMQ_STANDARD.md  README.md  SECURITY.md  SERVICE.md  SERVICE_START.md  main.py  pyproject.toml  requirements.txt  start.bat  start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: docs-lint.yml  stale.yml  tests.yml
app/: __init__.py  auth.py  config.py  downloader.py  exceptions.py  extractor.py  gateway_client.py  http_api.py  loadbalancer.py  logging_config.py  mcp_stdio.py  models.py  orchestrator.py  path_utils.py  persistence.py  response_contract.py  session_store.py  sm_producer_client.py  status_tracker.py  transcriber.py  worker.py  zmq_service.py
docs/: ARCHITECTURE.md  INTEGRATION.md  SM_PRODUCER_INTEGRATION.md
docs/concepts/: session-layout-v1.md
scripts/: migrate_session_layout.py  yt_bridge.py  yt_process_frame.py
scripts/git-hooks/: pre-commit
services/: me4-youtube.service.json
static/: app.js  index.html  selftest.html  style.css
tests/: __init__.py  conftest.py  test_auth.py  test_config.py  test_dir_contract.py  test_extractor.py  test_http_api.py  test_loadbalancer.py  test_models.py  test_phase4_persistence.py  test_phase4b_paths.py  test_seq_parser.py  test_session_readme.py  test_status_tracker.py  test_zmq_service.py
tests/migrate_session_layout/: test_atomicity.py  (+1 more)
(+2 files in other folders)
