[project]
name = "me4-youtube"
version = "1.0.7"
description = "ME4-YouTube — YouTube Content Extraction Service (MCP + ZMQ + HTTP + Framie)"
requires-python = ">=3.11"
authors = [
    {name = "ME4 Suite"}
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "S", "ASYNC"]
ignore = ["S101"]  # asserts in tests ok

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
